@startuml
title Aocudeo 架构图
class Queue
package checker {
	class CircleChecker
	class SignChecker
	SignChecker -* CircleChecker
}
package diagram {
	class Diagram
}
package executor {
	class Executor
	class Graph
}
package organizer {
	class Organizer
	() OrganizerConfig
	Organizer .> OrganizerConfig
}
package position {
	() Position
	class PositionMap
	class PositionObj
	class SurePosition
	PositionObj ..|> Position
	SurePosition --> PositionObj
	PositionMap --> SurePosition
}
package worker {
	class WorkerContext
	class WorkerRunner
	class WorkerManager
	WorkerRunner --o WorkerManager : < 每  执  行  生  成
	WorkerContext --o WorkerRunner : < 每  函  数  生  成
}
Queue --> Executor
Diagram -> Graph
PositionMap --* Organizer
Executor -o Graph : < 每  执  行  生  成
Executor -> WorkerRunner
CircleChecker --* Graph
SignChecker --* PositionMap
SignChecker --* PositionMap
PositionMap o- Graph : 缓  存  生  成 >
SignChecker --* Graph
WorkerManager --* Organizer
Diagram --o PositionMap : < 缓  存  生  成
Organizer <-- Executor
@enduml
